//
//  ViewAccessibilityIdentifier.swift
//  Cafeistic
//
//  Created by Ilyas Shomat on 03.07.2021.
//

import Foundation

public struct ViewAccessibilityIdentifier {
    struct Scenes {
        struct Login {
            static let loginTextField = "ViewAccessibilityIdentifier.Scenes.Login.loginTextField"
            static let passwordTextField = "ViewAccessibilityIdentifier.Scenes.Login.passwordTextField"
        }
    }
}
