//
//  LoginViewUITests.swift
//  CafeisticUITests
//
//  Created by Ilyas Shomat on 03.07.2021.
//

import XCTest
//@testable import Cafeistic

class LoginViewUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testFillLoginAndPasswordFields() throws {
        
        let app = XCUIApplication()
        app.launch()

        let loginTextField = app.textFields[ViewAccessibilityIdentifier.Scenes.Login.loginTextField]
        let passwordtextField = app.secureTextFields[ViewAccessibilityIdentifier.Scenes.Login.passwordTextField]

        loginTextField.tap()
        loginTextField.typeText("login")
//
        app.toolbars["Toolbar"].buttons["Done"].tap()
        
//        app.secureTextFields["ViewAccessibilityIdentifier.Scenes.Login.passwordTextField"].tap()
        
        passwordtextField.tap()
        passwordtextField.typeText("password")
    }
}
